--- a/NoSTORE/wwwroot/css/layout.css
+++ b/NoSTORE/wwwroot/css/layout.css
@@ -3,103 +3,250 @@
   font-family: "Strong";
   src: url(../Fonts/Strong-Regular.ttf) format("truetype");
 }
-header {
+.modal {
+  font-family: "Strong", sans-serif;
+  font-size: 1rem;
+  font-weight: 0;
+  color: #E0E0E0;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  padding: 10px;
-  top: 0;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+}
+.modal.active {
+  opacity: 1;
+}
+.modal .modal-content {
+  background-color: #3F3F46;
+  padding: 1rem;
+  border-radius: 8px;
+  width: 500px;
+  position: relative;
+  transition: height 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s ease;
+}
+.modal .modal-content h2 {
+  font-size: 2.5rem;
+}
+.modal .modal-content #auth-form {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.modal .modal-content #auth-form button {
+  border: none;
+  padding: 0.3rem;
+  font-size: 2rem;
+  background-color: #66A7C8;
+  color: #26262B;
+  border-radius: 6px;
+}
+.modal .modal-content #auth-form div {
+  display: flex;
+  flex-direction: column;
+}
+.modal .modal-content #auth-form div input {
+  margin-bottom: 1rem;
+  color: #E0E0E0;
+  padding-left: 0.5rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
   background-color: #26262B;
-  width: 100%;
+  outline: none;
+  border: 2px solid #66A7C8;
+  border-radius: 6px;
+  font-size: 1.5rem;
+}
+.modal .modal-content #auth-form #register-section, .modal .modal-content #auth-form #code-section {
+  overflow: hidden;
+  opacity: 0;
+  max-height: 0px;
+  transition: opacity 0.2s ease-out, max-height 1s ease-out;
+}
+.modal .modal-content #auth-form #register-section input, .modal .modal-content #auth-form #code-section input {
+  transform: translateY(-20px);
+  transition: transform 0.2s ease-out;
+}
+.modal .modal-content #auth-form #code-section {
+  display: flex;
+}
+.modal .modal-content #auth-form #code-section input {
+  margin-bottom: 0rem;
+}
+.modal .modal-content #auth-form #code-section div {
+  margin-bottom: 1rem;
+  display: flex;
+  align-content: flex-start;
+  justify-content: left;
+}
+.modal .modal-content #auth-form #code-section div button {
+  display: flex;
+  background: none;
+  padding: 0;
+  font-size: 1.2rem;
+  color: #66A7C8;
+}
+.modal .modal-content #auth-form #register-section.active, .modal .modal-content #auth-form #code-section.active {
+  max-height: 500px;
+  opacity: 1;
+}
+.modal .modal-content #auth-form #register-section.active input, .modal .modal-content #auth-form #code-section.active input {
+  transform: translateY(0);
+}
+.modal .modal-content #auth-form .support-buttons {
+  margin-bottom: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.modal .modal-content #auth-form .support-buttons button {
+  background: none;
+  padding: 0;
+  font-size: 1.5rem;
+  color: #66A7C8;
+  transition: opacity 1s ease-out;
+}
+.modal .modal-content #auth-form .support-buttons button:disabled {
+  opacity: 0.5;
+}
+
+header {
+  top: 0;
+  margin: 0;
+  width: 81%;
+  position: fixed;
   z-index: 1000;
+  border-radius: 0 0 10px 10px;
   -webkit-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
   -moz-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
   box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+  background-color: #3F3F46;
+  padding: 1rem;
 }
 header nav {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  gap: 2rem;
 }
-
-.site__logo {
-  margin-right: 23px;
+header nav .left {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 2rem;
+  flex: 1;
 }
-
-.catalog__button {
+header nav .left .catalog__button {
   font-family: "Strong", sans-serif;
-  font-size: 32px;
+  font-size: 1.5rem;
   font-weight: 0;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  gap: 15px;
+  gap: 1rem;
   background-color: #66A7C8;
-  border-radius: 10px;
-  width: 180px;
-  height: 64px;
-  margin-right: 30px;
-  transition: 0.2s ease;
-}
-.catalog__button:hover {
-  background-color: rgb(120.7572115385, 177.7884615385, 206.7427884615);
-}
-.catalog__button p {
+  padding: 0.7rem;
   color: #26262B;
-  margin: 0;
+  border-radius: 0.4rem;
 }
-.catalog__button img {
-  width: 20px;
-  height: 20px;
-  margin-top: 5px;
+header nav .left .catalog__button svg {
+  width: 1.2rem;
+  height: 1.2rem;
 }
-
-.search__input {
+header nav .left .catalog__button svg path {
+  fill: #26262B;
+}
+header nav .left .search-form {
+  flex: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
   background-color: transparent;
   border: 2px solid #66A7C8;
-  border-radius: 10px;
-  width: 600px;
-  height: 64px;
-  color: #E0E0E0;
-  font-family: "Strong", sans-serif;
-  font-size: 32px;
-  font-weight: 0;
-  padding-left: 16px;
-  transition: 0.2s ease;
-  margin-right: 30px;
+  height: 3.6rem;
+  border-radius: 8px;
+  overflow: hidden;
 }
-.search__input:focus {
+header nav .left .search-form input {
+  flex: 1;
+  font-family: "Strong", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 0;
   outline: none;
-  border: 2px solid #3ABBD1;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  font-family: "Strong", sans-serif;
-  font-size: 24px;
-  font-weight: 0;
-  gap: 20px;
-}
-.buttons a {
+  border: none;
+  padding: 0.6rem;
+  padding-left: 1rem;
+  background: transparent;
   color: #E0E0E0;
 }
-.buttons a div {
+header nav .left .search-form button {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+header nav .buttons {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+header nav .buttons a, header nav .buttons button {
+  font-family: "Strong", sans-serif;
+  font-size: 1.4rem;
+  font-weight: 0;
+  color: #E0E0E0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  gap: 2px;
+  gap: 0.4rem;
+  transition: 0.1s ease;
+  background: none;
+  outline: none;
+  border: none;
 }
-.buttons a div img {
-  margin-top: 5px;
-  width: 35px;
-  height: 35px;
+header nav .buttons a svg, header nav .buttons button svg {
+  height: 36px;
+  width: 36px;
+  overflow: visible;
+}
+header nav .buttons a svg #favorite, header nav .buttons a svg #basket, header nav .buttons a svg #profile path, header nav .buttons button svg #favorite, header nav .buttons button svg #basket, header nav .buttons button svg #profile path {
+  fill: transparent;
+  stroke: #3ABBD1;
+  stroke-width: 4px;
+  transition: 0.1s ease;
+}
+header nav .buttons a svg #chart-histogram path, header nav .buttons button svg #chart-histogram path {
+  stroke-width: 2px;
+  fill: none;
+  transition: 0.1s ease;
+}
+header nav .buttons a:hover, header nav .buttons button:hover {
+  color: #66A7C8;
+  filter: drop-shadow(0px 0px 15px rgba(63, 104, 135, 0.6));
+}
+header nav .buttons a:hover svg #favorite, header nav .buttons a:hover svg #basket, header nav .buttons a:hover svg #profile path, header nav .buttons button:hover svg #favorite, header nav .buttons button:hover svg #basket, header nav .buttons button:hover svg #profile path {
+  fill: #3ABBD1;
+}
+header nav .buttons a:hover svg #chart-histogram path, header nav .buttons button:hover svg #chart-histogram path {
+  stroke-width: 2px;
+  fill: none;
+  transition: 0.1s ease;
 }
 
 footer {
@@ -111,7 +258,7 @@ footer {
 }
 
 .footer__inside {
-  width: 84%;
+  width: 81%;
 }
 .footer__inside .footer_site__logo {
   margin-top: 24px;
@@ -196,11 +343,10 @@ footer {
   display: block;
 }
 .footer__inside .app div {
-  display: flex;
-  flex-direction: row;
   font-family: "Strong", sans-serif;
   font-size: 36px;
   font-weight: 0;
+  display: flex;
   border-radius: 8px;
   justify-content: center;
   align-items: center;
