--- a/NoSTORE/wwwroot/scss/layout.scss
+++ b/NoSTORE/wwwroot/scss/layout.scss
@@ -1,114 +1,292 @@
 ﻿@use 'variables';
 
-@mixin flex_row() {
-    display: flex;
-    flex-direction: row;
-}
 
-@mixin searchbox() {
+.modal {
+    @include variables.font($size: 1rem);
     color: variables.$text-color;
-    opacity: 70%;
-    padding-left: 16px;
-    @include variables.font($size: 32px);
-}
-
-header {
-    @include flex_row();
-    justify-content: center;
-    align-items: center;
     position: fixed;
-    padding: 10px;
-    top: 0;
-    background-color: variables.$bg-color;
-    width: 100%;
     z-index: 1000;
-    -webkit-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
-    -moz-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
-    box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
-
-    nav {
-        @include flex_row();
-        align-items: center;
-    }
-}
-
-.site__logo {
-    margin-right: 23px;
-}
-
-.catalog__button {
-    @include variables.font($size: 32px);
-    @include flex_row();
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    gap: 15px;
-    background-color: variables.$additional-color;
-    border-radius: 10px;
-    width: 180px;
-    height: 64px;
-    margin-right: 30px;
-    transition: 0.2s ease;
-
-    &:hover {
-        background-color: lighten(variables.$additional-color, 5%);
+    opacity: 0;
+    transition: opacity 0.2s ease-out;
+    &.active {
+        opacity: 1;
     }
 
-    p {
-        color: variables.$bg-color;
-        margin: 0;
-    }
+    .modal-content {
+        background-color: variables.$block-color;
+        padding: 1rem;
+        border-radius: 8px;
+        width: 500px;
+        position: relative;
+        transition: height 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        transition: 0.5s ease;
 
-    img {
-        width: 20px;
-        height: 20px;
-        margin-top: 5px;
-    }
-}
+        h2 {
+            font-size: 2.5rem;
+        }
 
-.search__input {
-    background-color: transparent;
-    border: 2px solid variables.$additional-color;
-    border-radius: 10px;
-    width: 600px;
-    height: 64px;
-    color: variables.$text-color;
-    @include variables.font($size: 32px);
-    padding-left: 16px;
-    transition: 0.2s ease;
-    margin-right: 30px;
-
-    &:focus {
-        outline: none;
-        border: 2px solid variables.$accent-color;
-    }
-}
-
-.buttons {
-    @include flex_row();
-    @include variables.font($size: 24px);
-    gap: 20px;
-
-    a {
-        color: variables.$text-color;
-
-        div {
+        #auth-form {
+            margin-top: 1rem;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            gap: 2px;
 
-            img {
-                margin-top: 5px;
-                width: 35px;
-                height: 35px;
+            button {
+                border: none;
+                padding: 0.3rem;
+                font-size: 2rem;
+                background-color: variables.$additional-color;
+                color: variables.$bg-color;
+                border-radius: 6px;
+            }
+
+            div {
+                display: flex;
+                flex-direction: column;
+
+
+                input {
+                    margin-bottom: 1rem;
+                    color: variables.$text-color;
+                    padding-left: 0.5rem;
+                    padding-top: 0.2rem;
+                    padding-bottom: 0.2rem;
+                    background-color: variables.$bg-color;
+                    outline: none;
+                    border: 2px solid variables.$additional-color;
+                    border-radius: 6px;
+                    font-size: 1.5rem;
+                }
+            }
+
+            #register-section, #code-section {
+                overflow: hidden;
+                opacity: 0;
+                max-height: 0px;
+
+                input {
+                    transform: translateY(-20px);
+                    transition: transform 0.2s ease-out;
+                }
+
+                transition: opacity 0.2s ease-out, max-height 1s ease-out;
+            }
+
+            #code-section {
+                display: flex;
+
+                input {
+                    margin-bottom: 0rem;
+                }
+
+                div {
+                    margin-bottom: 1rem;
+                    display: flex;
+                    align-content: flex-start;
+                    justify-content: left;
+
+                    button {
+                        display: flex;
+                        background: none;
+                        padding: 0;
+                        font-size: 1.2rem;
+                        color: variables.$additional-color;
+                    }
+                }
+            }
+
+            #register-section.active, #code-section.active {
+                max-height: 500px;
+
+                input {
+                    transform: translateY(0);
+                }
+
+                opacity: 1;
+            }
+
+            .support-buttons {
+                margin-bottom: 0.5rem;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
+                button {
+                    background: none;
+                    padding: 0;
+                    font-size: 1.5rem;
+                    color: variables.$additional-color;
+                    transition: opacity 1s ease-out;
+
+                    &:disabled {
+                        opacity: 0.5;
+                    }
+                }
             }
         }
     }
 }
 
+
+
+header {
+    top: 0;
+    margin: 0;
+    width: 81%;
+    position: fixed;
+    z-index: 1000;
+    border-radius: 0 0 10px 10px;
+    -webkit-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+    -moz-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+    box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+    background-color: variables.$block-color;
+    padding: 1rem;
+
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
+
+        .left {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            gap: 2rem;
+            flex: 1;
+
+            .site_logo {
+            }
+
+            .catalog__button {
+                @include variables.font($size: 1.5rem);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 1rem;
+                background-color: variables.$additional-color;
+                padding: 0.7rem;
+                color: variables.$bg-color;
+                border-radius: 0.4rem;
+
+                svg {
+                    width: 1.2rem;
+                    height: 1.2rem;
+
+                    path {
+                        fill: variables.$bg-color;
+                    }
+                }
+            }
+
+            .search-form {
+                flex: 1;
+                position: relative;
+                display: flex;
+                align-items: center;
+                background-color: transparent;
+                border: 2px solid variables.$additional-color;
+                height: 3.6rem;
+                border-radius: 8px;
+                overflow: hidden;
+
+
+                input {
+                    flex: 1;
+                    @include variables.font($size: 1.5rem);
+                    outline: none;
+                    border: none;
+                    padding: 0.6rem;
+                    padding-left: 1rem;
+                    background: transparent;
+                    color: variables.$text-color;
+                }
+
+                button {
+                    padding: 1rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                }
+            }
+        }
+
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+
+            a, button {
+                @include variables.font($size: 1.4rem);
+                color: variables.$text-color;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 0.4rem;
+                transition: 0.1s ease;
+                background: none;
+                outline: none;
+                border: none;
+
+                svg {
+                    height: 36px;
+                    width: 36px;
+                    overflow: visible;
+
+                    #favorite, #basket, #profile path {
+                        fill: transparent;
+                        stroke: variables.$accent-color;
+                        stroke-width: 4px;
+                        transition: 0.1s ease;
+                    }
+
+                    #chart-histogram {
+                        path {
+                            stroke-width: 2px;
+                            fill: none;
+                            transition: 0.1s ease;
+                        }
+                    }
+                }
+
+                &:hover {
+                    color: variables.$additional-color;
+                    filter: drop-shadow(0px 0px 15px rgba(63, 104, 135, 0.6));
+
+                    svg {
+                        #favorite, #basket, #profile path {
+                            fill: variables.$accent-color;
+                        }
+
+                        #chart-histogram {
+                            path {
+                                stroke-width: 2px;
+                                fill: none;
+                                transition: 0.1s ease;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 footer {
     display: flex;
@@ -119,7 +297,7 @@ footer {
 }
 
 .footer__inside {
-    width: 84%;
+    width: 81%;
 
     .footer_site__logo {
         margin-top: 24px;
@@ -217,8 +395,8 @@ footer {
         display: block;
 
         div {
-            @include flex_row();
             @include variables.font($size: 36px);
+            display: flex;
             border-radius: 8px;
             justify-content: center;
             align-items: center;
