--- a/NoSTORE/wwwroot/scss/site.scss
+++ b/NoSTORE/wwwroot/scss/site.scss
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+html {
+    font-size: 1rem;
+}
+
 p {
     margin: 0;
 }
@@ -20,7 +24,7 @@ body {
 
 main {
     margin-top: 7%;
-    width: 84%;
+    width: 81%;
     height: 100%;
 }
 
